--- a/app/src/main/res/layout/fragment_tag.xml
+++ b/app/src/main/res/layout/fragment_tag.xml
@@ -1,47 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <View
         android:id="@+id/tag_top_v"
         android:layout_width="match_parent"
         android:layout_height="1.4dp"
         android:background="@color/sub_color"
-        app:layout_constraintBottom_toBottomOf="@+id/tag_top_tv"
-         />
+        app:layout_constraintBottom_toBottomOf="@+id/tag_top_tv" />
 
     <ImageView
         android:id="@+id/tag_back_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_back_tag"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="27dp"
-        android:layout_marginStart="16dp"/>
+        android:src="@drawable/ic_back_tag"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tag_top_tv"
-        android:text="#명지 맛집"
-        android:textColor="@color/black"
-        android:fontFamily="@font/notosans_regular"
-        android:textFontWeight="700"
-        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/tag_back_bt"
+        android:layout_marginLeft="14dp"
+        android:fontFamily="@font/notosans_regular"
+        android:text="@string/tag_myongji_good_food"
+        android:textColor="@color/black"
+        android:textFontWeight="700"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/tag_back_bt"
         app:layout_constraintLeft_toRightOf="@id/tag_back_bt"
-        android:layout_marginLeft="14dp"/>
+        app:layout_constraintTop_toTopOf="@id/tag_back_bt" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/moa_myongji_rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:scrollbars="vertical"
         android:layout_marginTop="20dp"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
