--- a/app/src/main/res/layout/item_dialog.xml
+++ b/app/src/main/res/layout/item_dialog.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/dialog_custom"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/dialog_custom">
 
     <View
         android:id="@+id/view"
@@ -22,17 +20,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view" />
+
     <TextView
         android:id="@+id/btn_yes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
         android:gravity="center"
         android:paddingVertical="10dp"
-        android:text="아니요"
-        android:fontFamily="@font/notosans_regular"
-        android:textFontWeight="700"
+        android:text="@string/no_dialog_text"
         android:textColor="@color/sub_color"
-
+        android:textFontWeight="700"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,13 +41,13 @@
         android:id="@+id/btn_no"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
         android:gravity="center"
         android:paddingVertical="10dp"
-        android:text="네"
-        android:fontFamily="@font/notosans_regular"
+        android:text="@string/yes_dialog_text"
+        android:textColor="@color/sub_color"
         android:textFontWeight="700"
         android:textSize="14sp"
-        android:textColor="@color/sub_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_yes"
         app:layout_constraintHorizontal_bias="0.5"
@@ -59,15 +57,15 @@
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="94dp"
         android:layout_marginTop="45dp"
         android:layout_marginBottom="35dp"
-        android:textColor="@color/black"
-        android:textSize="14sp"
         android:fontFamily="@font/notosans_regular"
-        android:textFontWeight="700"
-        android:layout_marginHorizontal="94dp"
         android:gravity="center"
-        android:text="안녕하세요"
+        android:text="@string/hello_dialog_text"
+        android:textColor="@color/black"
+        android:textFontWeight="700"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
