--- a/app/src/main/res/layout/item_dialog_confirm.xml
+++ b/app/src/main/res/layout/item_dialog_confirm.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/dialog_custom"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/dialog_custom">
 
     <View
         android:id="@+id/view"
@@ -13,6 +11,7 @@
         android:layout_height="1.4dp"
         android:background="#cdcdcd"
         app:layout_constraintBottom_toTopOf="@+id/btn_confirm" />
+
     <TextView
         android:id="@+id/btn_yes"
         android:layout_width="0dp"
@@ -21,23 +20,23 @@
         android:paddingVertical="8dp"
         android:text="확인"
         android:textSize="14sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        android:visibility="gone"
         app:layout_constraintStart_toEndOf="@+id/btn_confirm" />
 
     <TextView
         android:id="@+id/btn_confirm"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
         android:gravity="center"
         android:paddingVertical="8dp"
-        android:text="확 인"
-        android:fontFamily="@font/notosans_regular"
+        android:text="@string/campus_dialog_okay_text"
+        android:textColor="#2A71CD"
         android:textFontWeight="700"
         android:textSize="14sp"
-        android:textColor="#2A71CD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_yes"
         app:layout_constraintHorizontal_bias="0.5"
@@ -48,11 +47,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="94dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/notosans_regular"
-        android:text=" 캠퍼스 설정 안내 "
+        android:text="@string/campus_dialog_title_text"
         android:textColor="@color/black"
         android:textFontWeight="700"
-        android:layout_marginTop="10dp"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,16 +61,16 @@
         android:id="@+id/textView_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/notosans_regular"
         android:layout_marginHorizontal="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="15dp"
+        android:breakStrategy="high_quality"
+        android:fontFamily="@font/notosans_regular"
         android:gravity="center"
         android:maxLines="3"
-        android:breakStrategy="high_quality"
-        android:text="최초로 설정된 캠퍼스는 이후 변경이 어려우니 신중하게 골라주세요!"
+        android:text="@string/campus_dialog_sub_title_text"
+        android:textColor="@color/black"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,17 +81,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="⚠️"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        />
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="⚠️"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/textView3"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"        />
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
