--- a/app/src/main/res/layout/item_restaurant_ranking.xml
+++ b/app/src/main/res/layout/item_restaurant_ranking.xml
@@ -3,17 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="14dp"
-    >
+    android:layout_marginTop="14dp">
 
     <TextView
         android:id="@+id/ranking_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
+        android:text="@string/ranking_title_text"
         android:textColor="@color/sub_color"
         android:textStyle="bold"
-        android:text="@string/ranking_title_text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,135 +30,127 @@
 
         <TextView
             android:id="@+id/item_food_name"
-            android:text="식당이름"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textFontWeight="700"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:textColor="#000000"
-            android:textSize="20sp"
             android:layout_marginStart="16dp"
-            />
+            android:fontFamily="@font/notosans_regular"
+            android:text="@string/restaurant_name"
+            android:textColor="#000000"
+            android:textFontWeight="700"
+            android:textSize="20sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/item_food_ellipse_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="0dp"
             android:src="@drawable/ic_restaurant_ellipse"
-            app:layout_constraintTop_toTopOf="@id/item_food_name"
             app:layout_constraintBottom_toBottomOf="@id/item_food_name"
             app:layout_constraintLeft_toRightOf="@id/item_food_name"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="0dp"/>
+            app:layout_constraintTop_toTopOf="@id/item_food_name" />
 
         <TextView
             android:id="@+id/item_food_object"
-            android:text="가게 종류"
-            android:textSize="12sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/item_food_ellipse_iv"
+            android:layout_marginLeft="5dp"
+            android:text="@string/restaurant_type"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/item_food_ellipse_iv"
             app:layout_constraintLeft_toRightOf="@id/item_food_ellipse_iv"
-            android:layout_marginLeft="5dp"/>
+            app:layout_constraintTop_toTopOf="@id/item_food_ellipse_iv" />
 
         <TextView
             android:id="@+id/week_food_afternoon_tv"
-            android:text="320m"
-            android:fontFamily="@font/notosans_regular"
-            android:textColor="@color/main_color"
-            android:textSize="10sp"
-            android:textFontWeight="700"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/item_food_object"
+            android:layout_marginLeft="5dp"
+            android:fontFamily="@font/notosans_regular"
+            android:text="@string/restaurant_distance"
+            android:textColor="@color/main_color"
+            android:textFontWeight="700"
+            android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="@id/item_food_object"
             app:layout_constraintLeft_toRightOf="@id/item_food_object"
-            android:layout_marginLeft="5dp"
-            />
+            app:layout_constraintTop_toTopOf="@id/item_food_object" />
 
         <ImageView
             android:id="@+id/item_food_love_fill_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_food_love_fill"
-            android:visibility="gone"
-            app:layout_constraintTop_toTopOf="@id/week_food_afternoon_tv"
-            app:layout_constraintBottom_toBottomOf="@id/week_food_afternoon_tv"
-            app:layout_constraintRight_toRightOf="parent"
             android:layout_marginEnd="16dp"
             android:paddingBottom="5dp"
-            />
+            android:src="@drawable/ic_food_love_fill"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/week_food_afternoon_tv"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/week_food_afternoon_tv" />
 
         <ImageView
             android:id="@+id/item_food_location_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_place"
-            app:layout_constraintTop_toBottomOf="@id/item_food_name"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="1dp"/>
+            android:layout_marginTop="1dp"
+            android:src="@drawable/ic_place"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/item_food_name" />
 
         <TextView
             android:id="@+id/item_food_location_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="가게 위치"
-            app:layout_constraintTop_toTopOf="@id/item_food_location_iv"
+            android:layout_marginLeft="5dp"
+            android:text="@string/restaurant_location"
             app:layout_constraintBottom_toBottomOf="@id/item_food_location_iv"
             app:layout_constraintLeft_toRightOf="@id/item_food_location_iv"
-            android:layout_marginLeft="5dp"
-            />
+            app:layout_constraintTop_toTopOf="@id/item_food_location_iv" />
 
         <ImageView
             android:id="@+id/item_food_phone_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_phone"
-            app:layout_constraintTop_toBottomOf="@id/item_food_location_tv"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="20dp"
             android:layout_marginLeft="18dp"
             android:layout_marginTop="9dp"
+            android:layout_marginBottom="20dp"
             android:paddingTop="3dp"
-            />
+            android:src="@drawable/ic_phone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/item_food_location_tv" />
 
         <TextView
             android:id="@+id/item_food_phone_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="가게 전화번호"
-            app:layout_constraintTop_toTopOf="@id/item_food_phone_iv"
+            android:layout_marginLeft="7dp"
+            android:text="@string/restaurant_phone"
             app:layout_constraintBottom_toBottomOf="@id/item_food_phone_iv"
             app:layout_constraintLeft_toRightOf="@id/item_food_phone_iv"
-            android:layout_marginLeft="7dp"
-            />
-
+            app:layout_constraintTop_toTopOf="@id/item_food_phone_iv" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/item_food_detail_cl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
             android:background="@drawable/week_food_layout"
             app:layout_constraintBottom_toBottomOf="@+id/item_food_phone_tv"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/item_food_phone_tv"
-            android:layout_marginRight="16dp"
-            >
+            app:layout_constraintTop_toTopOf="@+id/item_food_phone_tv">
 
             <TextView
                 android:id="@+id/item_food_detail_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="5dp"
-                android:paddingBottom="6dp"
                 android:paddingStart="13dp"
+                android:paddingTop="5dp"
                 android:paddingEnd="22dp"
-                android:text="바로 가기"
+                android:paddingBottom="6dp"
+                android:text="@string/direct_go"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 app:layout_constraintLeft_toLeftOf="parent"
