--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/dialog_custom"
     android:layout_width="match_parent"
     android:layout_height="262dp">
-
 
     <EditText
         android:id="@+id/review_et"
@@ -33,7 +30,7 @@
         android:id="@+id/review_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="학식에 대한 의견 남기기"
+        android:text="@string/food_review_bt"
         android:textColor="@color/home_gray_color"
         android:layout_marginTop="17dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -48,7 +45,7 @@
         android:background="@drawable/week_food_layout"
         android:paddingHorizontal="19dp"
         android:paddingVertical="9dp"
-        android:text="완료"
+        android:text="@string/review_okay"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/review_et"
@@ -62,6 +59,7 @@
         app:layout_constraintEnd_toEndOf="@+id/review_et"
         app:layout_constraintTop_toTopOf="@+id/review_tv"
         app:srcCompat="@drawable/ic_close_square" />
+
     <ImageView
         android:id="@+id/review_success_iv"
         android:layout_width="wrap_content"
