--- a/app/src/main/res/layout/item_review_dialog.xml
+++ b/app/src/main/res/layout/item_review_dialog.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/dialog_custom"
     android:layout_width="match_parent"
-    android:layout_height="262dp">
-
+    android:layout_height="262dp"
+    android:background="@drawable/dialog_custom">
 
     <ImageView
         android:id="@+id/imageView"
@@ -18,4 +15,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/dialog_review_confirm" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
