--- a/app/src/main/res/layout/item_love_restaurant.xml
+++ b/app/src/main/res/layout/item_love_restaurant.xml
@@ -140,7 +140,7 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/item_love_detail_iv"
+            android:id="@+id/item_love_detail_cl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
