--- a/app/src/main/res/layout/item_restaurant_ranking.xml
+++ b/app/src/main/res/layout/item_restaurant_ranking.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="14dp">
 
     <TextView
@@ -10,10 +11,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:text="@string/ranking_title_text"
+        android:text="명지대학생들이 "
         android:textColor="@color/sub_color"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/ranking_title_tv1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="9 "
+        android:textColor="@color/sub_color"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toRightOf="@id/ranking_title_tv"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/ranking_title_tv2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="명 담았어요!"
+        android:textColor="@color/sub_color"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toRightOf="@id/ranking_title_tv1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -131,6 +152,45 @@
             app:layout_constraintBottom_toBottomOf="@id/item_food_phone_iv"
             app:layout_constraintLeft_toRightOf="@id/item_food_phone_iv"
             app:layout_constraintTop_toTopOf="@id/item_food_phone_iv" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/item_food_detail_cl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/week_food_layout"
+            app:layout_constraintBottom_toBottomOf="@+id/item_food_phone_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/item_food_phone_tv">
+
+            <TextView
+                android:id="@+id/item_food_detail_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="13dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="22dp"
+                android:paddingBottom="6dp"
+                android:text="@string/direct_go"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/item_food_detail_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_food_detail_arrow"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
