--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/dialog_custom"
     android:layout_width="match_parent"
-    android:layout_height="262dp">
+    android:layout_height="wrap_content">
 
 
     <EditText
@@ -18,7 +18,7 @@
         android:layout_marginBottom="13dp"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:layout_marginHorizontal="26dp"
+        android:layout_marginHorizontal="16dp"
         android:maxLength="300"
         android:inputType="textMultiLine"
         android:overScrollMode="always"
@@ -72,6 +72,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/dialog_review_confirm" />
+
+    <View
+        android:id="@+id/review_v"
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/review_confirm_btn" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
