--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -1,41 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/dialog_custom"
     android:layout_width="match_parent"
-    android:layout_height="262dp">
+    android:layout_height="wrap_content"
+    android:background="@drawable/dialog_custom">
 
     <EditText
         android:id="@+id/review_et"
         android:layout_width="match_parent"
         android:layout_height="138dp"
-        android:background="@drawable/dialog_custom"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="19dp"
-        android:gravity="start"
         android:layout_marginBottom="13dp"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:layout_marginHorizontal="26dp"
-        android:maxLength="300"
+        android:background="@drawable/dialog_custom"
+        android:gravity="start"
         android:inputType="textMultiLine"
+        android:maxLength="300"
         android:overScrollMode="always"
         android:scrollbarStyle="insideInset"
         android:scrollbars="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/review_tv"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-         />
+        app:layout_constraintTop_toBottomOf="@+id/review_tv" />
 
     <TextView
         android:id="@+id/review_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/food_review_bt"
-        android:textColor="@color/home_gray_color"
         android:layout_marginTop="17dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="학식에 대한 의견 남기기"
+        android:textColor="@color/home_gray_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/review_confirm_btn"
@@ -45,7 +44,7 @@
         android:background="@drawable/week_food_layout"
         android:paddingHorizontal="19dp"
         android:paddingVertical="9dp"
-        android:text="@string/review_okay"
+        android:text="완료"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/review_et"
@@ -71,5 +70,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/dialog_review_confirm" />
 
+    <View
+        android:id="@+id/review_v"
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/review_confirm_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
