[refactor]lovefragment empty text change

--- a/app/src/main/res/layout/fragment_love.xml
+++ b/app/src/main/res/layout/fragment_love.xml
@@ -40,7 +40,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/love_not_restaurant"
-        android:textSize="20sp"
+        android:textSize="12sp"
+        android:textAlignment="center"
+        android:fontFamily="@font/notosans_regular"
+        android:textFontWeight="700"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
