[feat] : ViewPager Size 조절(item 크기 안잘리게)

--- a/app/src/main/res/layout/fragment_love.xml
+++ b/app/src/main/res/layout/fragment_love.xml
@@ -39,8 +39,11 @@
         android:id="@+id/favorite_empty_love"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
         android:text="@string/love_not_restaurant"
-        android:textSize="20sp"
+        android:textAlignment="center"
+        android:textFontWeight="700"
+        android:textSize="12sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
