--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -78,14 +78,14 @@
         android:id="@+id/tl_search"
         android:layout_width="0dp"
         android:layout_height="43dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="23dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="23dp"
         android:background="@drawable/search_food_stroke"
-        android:drawableRight="@drawable/search_find_icon"
+        android:drawableEnd="@drawable/search_find_icon"
         android:hint="@string/search_restaurant_text"
         android:inputType="textAutoComplete"
-        android:paddingLeft="22dp"
-        android:paddingRight="14dp"
+        android:paddingStart="22dp"
+        android:paddingEnd="14dp"
         android:textSize="13sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@id/search_back_bt"
