feat(sort): 인기순 추천순 기능 추가

--- a/app/src/main/res/layout/header_search_ranking.xml
+++ b/app/src/main/res/layout/header_search_ranking.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/header_rank"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -154,5 +155,16 @@
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/horizon_sv" />
+
+    <Spinner
+        android:id="@+id/spSort"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/good_place_myongji"
+        app:layout_constraintBottom_toBottomOf="@id/good_place_myongji"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="인기순"
+        android:textSize="12dp"
+        android:textColor="#636363" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
