--- a/app/src/main/res/layout/header_search_ranking.xml
+++ b/app/src/main/res/layout/header_search_ranking.xml
@@ -152,7 +152,7 @@
         android:text="@string/search_already_food"
         android:textColor="#0E0E0E"
         android:textFontWeight="700"
-        android:textSize="20sp"
+        android:textSize="22dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/horizon_sv" />
 
@@ -162,9 +162,23 @@
         android:layout_height="wrap_content"
         android:textColor="#636363"
         android:textSize="12dp"
+        android:background="@null"
         app:layout_constraintBottom_toBottomOf="@id/good_place_myongji"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btArrow"
         app:layout_constraintTop_toTopOf="@id/good_place_myongji"
         tools:text="인기순" />
+
+    <ImageView
+        android:id="@+id/btArrow"
+        android:layout_width="24dp"
+        android:layout_height="36dp"
+        android:paddingEnd="12dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:src="@drawable/arrow_bottom"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/spSort"
+        app:layout_constraintBottom_toBottomOf="@id/spSort"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
