feat(paste): 전화번호 없는 경우 밑줄 취소

--- a/app/src/main/res/layout/item_restaurant_ranking.xml
+++ b/app/src/main/res/layout/item_restaurant_ranking.xml
@@ -148,7 +148,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="7dp"
-            android:text="@string/restaurant_phone"
+            tools:text="@string/restaurant_phone"
             app:layout_constraintBottom_toBottomOf="@id/item_food_phone_iv"
             app:layout_constraintLeft_toRightOf="@id/item_food_phone_iv"
             app:layout_constraintTop_toTopOf="@id/item_food_phone_iv" />
