--- a/app/src/main/res/layout/custom_balloon.xml
+++ b/app/src/main/res/layout/custom_balloon.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:background="@drawable/ic_unlove"
-        tools:text="20"
         android:gravity="center"
-        />
+        android:scaleType="centerInside"
+        android:textColor="@android:color/black"
+        android:textSize="10sp"
+        tools:text="20" />
 
 </LinearLayout>
